--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.11.3"
 sqlalchemy = "^1.3.16"
 python-multipart = "^0.0.5"
 pyjwt = "^1.7.1"
+jinja2 = "^2.11.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
