--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "final_project"
+name = "ucsb"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -12,6 +12,8 @@ sqlalchemy = "^1.3.16"
 python-multipart = "^0.0.5"
 pyjwt = "^1.7.1"
 jinja2 = "^2.11.2"
+pytest-asyncio = "^0.12.0"
+aiofiles = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
@@ -21,7 +23,7 @@ isort = "^4.3.21"
 black = "^19.10b0"
 unify = "^0.5"
 flake8 = "^3.7.9"
-pylint = "^2.4.4"
+pylint = "2.4.4"
 mypy = "^0.761"
 
 
