--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pyjwt = "^1.7.1"
 jinja2 = "^2.11.2"
 pytest-asyncio = "^0.12.0"
 aiofiles = "^0.5.0"
+pytest-mock = "^3.1.0"
+mock = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.3.5"
