--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,5 @@ services:
     ports:
       - 80:8000
     environment:
-      - BASE_ADDRESS=localhost
+      - BASE_ADDRESS="185.189.14.105"
       - PORT=80
